added concise summary